<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16sp"
    android:paddingRight="16sp"
    tools:context=".MainActivity">>
    <TextView
        android:id="@+id/trainLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        android:layout_marginStart="20sp"
        android:layout_marginEnd="20sp"
        android:textColor="@android:color/black"
        android:textColorLink="@android:color/black"
        android:textSize="28sp"
        android:hint="@string/trainingLabel" />
    <Button
        android:id="@+id/startBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60sp"
        android:layout_marginStart="20sp"
        android:layout_marginEnd="20sp"
        android:textColor="@android:color/black"
        android:textColorLink="@android:color/black"
        android:textSize="28sp"
        android:layout_below="@id/trainLabel"
        android:text="@string/trainingBegin" />
    <Button
        android:id="@+id/displayHistoryBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60sp"
        android:layout_marginStart="20sp"
        android:layout_marginEnd="20sp"
        android:textColor="@android:color/black"
        android:textColorLink="@android:color/black"
        android:textSize="28sp"
        android:layout_below="@id/startBtn"
        android:text="@string/trainingHistory" />
    <Button
        android:id="@+id/closeBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80sp"
        android:layout_marginStart="20sp"
        android:layout_marginEnd="20sp"
        android:textColor="@android:color/black"
        android:textColorLink="@android:color/black"
        android:textSize="28sp"
        android:layout_below="@id/displayHistoryBtn"
        android:text="@string/close" />

</RelativeLayout>